--- a/index.html
+++ b/index.html
@@ -10,8 +10,20 @@
 </head>
 <body>
 
+
+    <div class="profile-photo">
+        <img class="dp" src="./Images/profile.jpg" alt="profile-photo">
+    </div>
+
+    <div class="introduction">
+        <h5>Howdy!</h5>
+        <h1>I'm <strong> Aonmoy Das</strong></h1>
+        <p>An Electrical Engineering student and hopefully a future Embebbed System Engineer</p>
+    </div>
+
     <div class="bg" id="home">
-        <img src="./Images/706051.jpg" alt="Home-background">
+        <img src="./Images/architecture-buildings-city-313782.jpg" alt="Home-background">
+
     </div>
    
     <div class="container-home">
